--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ html {
   transform-style: preserve-3d;
 }
 
-.photo:hover {
+.photo.is-flipped {
   transform: rotateY(180deg);
 }
 
@@ -229,8 +229,8 @@ html {
   font-size: 30px;
   color: rgb(23, 39, 59);
   position: sticky;
-  top: 2px;
-  display: none;
+  height: 50px;
+  top: 10px;
   z-index: 1;
 }
 
@@ -254,15 +254,16 @@ html {
   transition-duration: 500ms;
 }
 
-@media only screen and (max-width: 760px) {
-  .explain {
-    display: block;
-  }
-  .explain {
-    border: 2px solid rgba(0, 0, 0, 0.308);
-    border-radius: 20px;
-    padding: 20px;
-    color: rgba(41, 167, 167, 0.507);
-    background-color: rgba(22, 22, 148, 0.185);
-  }
+.explain {
+  border: 2px solid rgba(0, 0, 0, 0.308);
+  border-radius: 20px;
+  padding: 20px;
+  color: rgba(41, 167, 167, 0.507);
+  background-color: rgba(22, 22, 148, 0.185);
+  text-align: center;
+  font-size: 30px;
+  position: sticky;
+  height: 50px;
+  top: 10px;
+  z-index: 1;
 }
